# midas_fetcher

./: .gitignore  Cargo.toml  HASH_OPTIMIZATION.md  LICENSE-APACHE  LICENSE-MIT  PLANNING.md  README.md  TASK.md  TEST_AUTH.md  TODO.md  cache_structure_demo.md  test_progress.rs
PRPs/: midas-fetcher-implementation.md
examples/: auth.rs.ex  client.rs.ex  midas-open-v202407-md5s.txt  midas-open_uk-mean-wind-obs_dv-202407_aberdeenshire_00145_cairnwell_capability.csv  midas-open_uk-mean-wind-obs_dv-202407_aberdeenshire_00145_cairnwell_qcv-1_1994.csv  web_scraper.rs.bak
src/: config.rs  constants.rs  errors.rs  lib.rs  main.rs  prelude.rs
src/app/: cache.rs  cache.rs.bak  client.rs  coordinator.rs  coordinator.rs.backup  hash.rs  manifest.rs  mod.rs  models.rs  queue.rs  worker.rs
src/app/cache/: config.rs  manager.rs  mod.rs  path.rs  reservation.rs  stats.rs  verification.rs
src/app/cache/tests/: integration_tests.rs  mod.rs
src/app/client/: auth.rs  config.rs  download.rs  http.rs  mod.rs
src/app/client/tests/: mod.rs  (+2 more)
src/app/coordinator/: background_tasks.rs  completion.rs  config.rs  mod.rs  progress.rs  signals.rs  stats.rs
src/app/manifest/: analysis.rs  mod.rs  streaming.rs  types.rs  utils.rs  version_manager.rs
src/app/queue/: config.rs  core.rs  mod.rs  state.rs  stats.rs  types.rs
src/app/worker/: config.rs  core.rs  mod.rs  pool.rs  stats.rs  types.rs
src/auth/: credentials.rs  mod.rs
src/cli/: args.rs  commands.rs  mod.rs  progress.rs  startup.rs
tests/: coordinator_integration.rs
tests/coordinator/: mod.rs
tests/queue/: mod.rs
(+6 files in other folders)
